samples/InspectionApp/src/Salesforce/objects/Inspection_Step_Response__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Item__c</fullName>
        <label>Inspection Item</label>
        <referenceTo>Inspection_Step__c</referenceTo>
        <relationshipName>Inspection_Item_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inspection_Response__c</fullName>
        <label>Inspection Response</label>
        <referenceTo>Inspection_Response__c</referenceTo>
        <relationshipName>Inspection_Item_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Inspection Step Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Inspection Step Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Step Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>